welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:1: error: Missing closing brace `}' assumed here
override def run() {
^SnakeBuggle:1: error: expected start of definition
override def run() {
         ^SnakeBuggle:13: error: expected class or object definition
def serpent(){
^SnakeBuggle:37: error: expected class or object definition
def pos(){
^